mise à jour page

--- a/indexameliorer.html
+++ b/indexameliorer.html
@@ -8,6 +8,7 @@
 	Plutôt que de suggérer des designs à la mode, nous travaillerons avec vous pour comprendre vos objectifs commerciaux afin de vous proposer le meilleur design possible.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 	<meta name="google-site-verification" content="qGEjgzQoZVfugf1OPXRHxHaAcr82F3knwG09yq3NQ4c" />
+	<code><meta name="robots" content=""></code>
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
     
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
