suppression image avec espace

--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="fr">
 
 <head>
+	
+	<meta name="title" content="Agence La panthère">
 	<meta charset="utf-8">
-	<meta name="keywords"
-		content="Entreprise Web design à Lyon, l'agence la panthère vous conseille dans la réalisation et le design de votre site internet"
+	<meta name="keywords" content="Entreprise Web design à Lyon, l'agence la panthère vous conseille dans la réalisation et le design de votre site internet"
 		.>
-	<meta name="description"
-		content="L'agence La Panthère est une agence de web design qui aide les entreprises à devenir attractives et visibles sur internet,
+	<meta name="description" content="L'agence La Panthère est une agence de web design qui aide les entreprises à devenir attractives et visibles sur internet,
 	    Que vous ayez un site web qui a besoin d'un rafraîchissement ou que vous partiez de zéro, laissez-nous vous réaliser un design dont vous serez fier,
 	    Plutôt que de suggérer des designs à la mode, nous travaillerons avec vous pour comprendre vos objectifs commerciaux afin de vous proposer le meilleur design possible.">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
@@ -24,7 +24,7 @@
 
 
 
-	<title>La Panthère, Entreprise Web Design Lyon</title>
+	
 
 
 	<!-- Analytics -->
@@ -38,8 +38,8 @@
 		gtag('config', 'G-SR2ZGDZ5MX');
 	</script>
 	<!-- Analytics END -->
-
-</head>
+	<title>La Panthère, Entreprise Web Design Lyon</title>
+	</head>
 
 <body>
 
@@ -193,9 +193,10 @@
 						<div class="col-sm-6">
 							<a href="#" data-lightbox="img/1.webp" data-gallery-id="gallery-1"
 								data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img
-									src="1 - Copie.webp" class="img-responsive portfolio-thumb"
+									src="1-Copie.webp" class="img-responsive portfolio-thumb"
 									alt="Lyon web design logo agence web meilleure agence et refonte site web journal"
 									class="img-responsive portfolio-thumb" /></a>
+
 							<h3 class="mg-md text-center">
 								Refonte d'un site web pour un journal local
 							</h3>
@@ -206,7 +207,7 @@
 						<div class="col-sm-6">
 							<a href="#" data-lightbox="img/2.webp" data-gallery-id="gallery-1"
 								data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img
-									src="2 - Copie.webp" class="img-responsive portfolio-thumb"
+									src="2-Copie.webp" class="img-responsive portfolio-thumb"
 									alt="Lyon web design logo agence web meilleure agence, Création d'un site web pour photographes" /></a>
 							<h3 class="mg-md text-center">
 								Création d'un site web pour photographes
@@ -220,7 +221,7 @@
 						<div class="col-sm-6">
 							<a href="#" data-lightbox="img/3.webp" data-gallery-id="gallery-1"
 								data-caption="Création d'un site internet pour un voyageur"
-								data-frame="snapshot-lb"><img src="3 - Copie.webp"
+								data-frame="snapshot-lb"><img src="3-Copie.webp"
 									class="img-responsive portfolio-thumb"
 									alt="Lyon web design logo agence web meilleure agence, Création d'un site web pour voyageur" /></a>
 							<h3 class="mg-md text-center">
@@ -234,7 +235,7 @@
 						<div class="col-sm-6">
 							<a href="#" data-lightbox="img/4.webp" data-gallery-id="gallery-1"
 								data-caption="Conception d'un site pour une agence de mariage"
-								data-frame="snapshot-lb"><img src="4 - Copie.webp"
+								data-frame="snapshot-lb"><img src="4-Copie.webp"
 									class="img-responsive portfolio-thumb"
 									alt="Lyon web design logo agence web meilleure agence, Création d'un site web pour agence de mariage" /></a>
 							<h3 class="mg-md text-center">
