--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="https://facebook.com/" aria*label="facebook"><span
+									<a class="social" href="https://facebook.com/" aria-label="facebook"><span
 											class="fa fa-facebook icon-md"></span></a>
 								</div>
 							</div>
