--- a/page2.html
+++ b/page2.html
@@ -7,7 +7,7 @@
 	Que vous ayez un site web qui a besoin d'un rafraîchissement ou que vous partiez de zéro, laissez-nous vous réaliser un design dont vous serez fier,
 	Plutôt que de suggérer des designs à la mode, nous travaillerons avec vous pour comprendre vos objectifs commerciaux afin de vous proposer le meilleur design possible.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-	<code><meta name="robots" content="index, follow"></code>
+	<meta name="robots" content="index, follow">
     <link rel="shortcut icon" type="image/webp" href="logo.webp">
    
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
