--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
 	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
 
-
+<title>La Panthère, Entreprise Web Design Lyon</title>
 
 	
 
@@ -37,12 +37,8 @@
 		gtag('config', 'G-SR2ZGDZ5MX');
 	</script>
 	<!-- Analytics END -->
-	<title>La Panthère, Entreprise Web Design Lyon</title>
-
+	
 </head>
-
-
-
 	<body>
 		<!-- Principal conteneur -->
 		<main class="page-container">
@@ -195,7 +191,7 @@
 								data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img
 									src="1-Copie.webp" class="img-responsive portfolio-thumb"
 									alt="Lyon web design logo agence web meilleure agence et refonte site web journal"
-									class="img-responsive portfolio-thumb" /></a>
+									class="img-responsive portfolio-thumb"></a>
 
 							<h3 class="mg-md text-center">
 								Refonte d'un site web pour un journal local
