--- a/index.html
+++ b/index.html
@@ -190,8 +190,7 @@
 							<a href="#" data-lightbox="img/1.webp" data-gallery-id="gallery-1"
 								data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img
 									src="1-Copie.webp" class="img-responsive portfolio-thumb"
-									alt="Lyon web design logo agence web meilleure agence et refonte site web journal"
-									class="img-responsive portfolio-thumb"></a>
+									alt="Lyon web design logo agence web meilleure agence et refonte site web journal"></a>
 
 							<h3 class="mg-md text-center">
 								Refonte d'un site web pour un journal local
