--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
 				<div class="container bloc-md">
 					<div class="row">
 						<div class="col-sm-12 text-center">
-							<p class="text-center">L'agence La Panthère est une agence de web design qui aide les
-								entreprises à devenir attractives et visibles sur internet.</p>
+							<h2 class="text-center">L'agence La Panthère est une agence de web design qui aide les
+								entreprises à devenir attractives et visibles sur internet.</h2>
 						</div>
 					</div>
 					<div class="row voffset-lg med-width-whitespace">
@@ -106,9 +106,9 @@
 							<div class="text-center">
 								<span class="et-icon-browser sm-shadow icon-dark-slate-blue icons icon-lg"></span>
 							</div>
-							<h2 class="mg-md text-center">
+							<h3 class="mg-md text-center">
 								Web design
-							</h2>
+							</h3>
 							<p class="text-center ">
 								Que vous ayez un site web qui a besoin d'un rafraîchissement ou que vous partiez de
 								zéro, laissez-nous vous réaliser un design dont vous serez fier.
@@ -118,9 +118,9 @@
 							<div class="text-center">
 								<span class="et-icon-presentation sm-shadow icon-dark-slate-blue icons icon-lg"></span>
 							</div>
-							<h2 class="mg-md text-center">
+							<h3 class="mg-md text-center">
 								Stratégie
-							</h2>
+							</h3>
 							<p class="text-center ">
 								Plutôt que de suggérer des designs à la mode, nous travaillerons avec vous pour
 								comprendre vos objectifs commerciaux afin de vous proposer le meilleur design possible.
@@ -130,9 +130,9 @@
 							<div class="text-center">
 								<span class="et-icon-edit sm-shadow icon-dark-slate-blue icons icon-lg"></span>
 							</div>
-							<h2 class="mg-md text-center">
+							<h3 class="mg-md text-center">
 								Illustrations
-							</h2>
+							</h3>
 							<p class="text-center ">
 								Un bon design n'est rien sans de bonnes illustrations. Laissez faire notre équipe de
 								graphistes talentueux pour donner à vos pages une touche finale d'élégance.<br>
@@ -141,9 +141,9 @@
 					</div>
 					<div class="row voffset-lg voffset">
 						<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
-							<p class="text-center">"L'agence La Panthère est une excellente agence web ! Les web
+							<h3 class="text-center">"L'agence La Panthère est une excellente agence web ! Les web
 								designers ont réussi à capturer l'essence de notre entreprise et à l'intégrer à notre
-								site. Cela nous a aidé à doubler nos ventes en ligne à Lyon</p>
+								site. Cela nous a aidé à doubler nos ventes en ligne à Lyon</3>
 							<p class="text-center">Maxime Guilbard, PDG de A vos fourchettes</p>
 						</div>
 					</div>
