--- a/index.html
+++ b/index.html
@@ -143,8 +143,8 @@
 						<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
 							<h3 class="text-center">"L'agence La Panthère est une excellente agence web ! Les web
 								designers ont réussi à capturer l'essence de notre entreprise et à l'intégrer à notre
-								site. Cela nous a aidé à doubler nos ventes en ligne à Lyon</3>
-							<p class="text-center">Maxime Guilbard, PDG de A vos fourchettes</p>
+								site. Cela nous a aidé à doubler nos ventes en ligne à Lyon</h3>
+							<h3 class="text-center">Maxime Guilbard, PDG de A vos fourchettes</h3>
 						</div>
 					</div>
 				</div>
